fixed spacing

--- a/css/desktop/homepage.css
+++ b/css/desktop/homepage.css
@@ -1,7 +1,7 @@
 /* Desktop CSS */
 
 .page-content-outer-container {
-    row-gap: 110px;
+    padding-top: 125px;
 }
 
 .page-content-inner-container {
