--- a/css/mobile/proj2.css
+++ b/css/mobile/proj2.css
@@ -1,14 +1,20 @@
 /* Mobile */
 
-@media (max-width: 1200px) {
+@media (max-width: 1236px) {
     li.project-desc-li {
         font-size: 13px;
     }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1165px) {
     li.project-desc-li {
         font-size: 11px;
+    }
+}
+
+@media (max-width: 1125px) {
+    li.project-desc-li {
+        font-size: 10px;
     }
 }
 
